--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
+<header>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">   
+          <ul class="nav nav-pills">
+            <li class="nav-item" ><a href="#" class="btn btn-secondary" aria-current="page" onclick="location.href='index.html';" >Pirmā lapa</a></li>
+            <li class="nav-item"><a href="#" class="btn btn-secondary" class="augsa" onclick="location.href='indexotrs.html';">Otrā lapa</a></li>
+          </ul>
+        </header>
+      </div>
+</header>
+<label for="iplat">Istabas platība m2:</label><br> 
+<input type="number" id="iplat" name="iplat"><br>
+
+<label for="lcena">Lamināta cena(1paka):</label><br> 
+<input type="number" id="lcena" name="lcena"><br>
+
+<label for="lskai">Lamināta skaits pakā m2:</label><br> 
+<input type="number" id="lskai" name="lskai"><br>
+
 <script src="script.js"></script>
 </body>
 </html>
