--- a/indexotrs.html
+++ b/indexotrs.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="visual.css">
     <title>Document</title>
 </head>
-<div class="cont">
-    <div class="balts"></div>
-    <div class="divi"></div>
-    <div class="tris"></div>
-    <div class="cetri"></div>
-    <div class="pieci"></div>
-    <div class="sesi"></div>
-    <div class="septin"></div>
-    <div class="aston"></div>
-    <div class="devin"></div>
-</div>
+<header>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">   
+          <ul class="nav nav-pills">
+            <li class="nav-item" ><a href="#" class="btn btn-secondary" aria-current="page" onclick="location.href='index.html';" >Pirmā lapa</a></li>
+            <li class="nav-item"><a href="#" class="btn btn-secondary" onclick="location.href='indexotrs.html';">Otrā lapa</a></li>
+          </ul>
+        </header>
+      </div>
+</header>
+<script src="script.js"></script>
 </body>
 </html>
