--- a/indexotrs.html
+++ b/indexotrs.html
@@ -18,7 +18,18 @@
           </ul>
         </header>
       </div>
+
+      <h1>Mīnas</h1>
+      <div id="gameBoard"></div>
 </header>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="container">
+  <footer class="d-flex flex-column h-100">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    </ul>
+    <p class="text-center text-body-secondary">© 2024 Noslēguma darbs</p>
+  </footer>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
