--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </div>
 </header>
 <body>
-<label for="cena">Ievadiet lamināta cenu (pakā):</label><br><br>
-<input type="number" id="cena" placeholder="Cena (€/kv.m)"><br>
+<label for="cena">Ievadiet lamināta cenu (pakā):</label><br>
+<input type="number" id="cena" placeholder="Cena (€/kv.m)"><br><br>
 
 <label for="platiba">Ievadiet istabas platību (kv.m):</label><br>
 <input type="number" id="platiba" placeholder="Platība (kv.m)"><br><br>
@@ -28,7 +28,7 @@
 <button onclick="aprēķināt()">Aprēķināt</button>
 
 <p id="rezultāts"></p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <div class="container">
   <footer class="d-flex flex-column h-100">
@@ -37,7 +37,7 @@
     <p class="text-center text-body-secondary">© 2024 Noslēguma darbs</p>
   </footer>
 </div>
-
+<p id="currentDate"></p>
 <script src="script.js"></script>
 </body>
 </html>
