--- a/indexotrs.html
+++ b/indexotrs.html
@@ -30,6 +30,7 @@
     <p class="text-center text-body-secondary">© 2024 Noslēguma darbs</p>
   </footer>
 </div>
+<p id="currentDate"></p>
 <script src="script.js"></script>
 </body>
 </html>
