--- a/index.html
+++ b/index.html
@@ -8,36 +8,54 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<header>
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">   
-          <ul class="nav nav-pills">
-            <li class="nav-item" ><a href="#" class="btn btn-secondary" aria-current="page" onclick="location.href='index.html';" >Pirmā lapa</a></li>
-            <li class="nav-item"><a href="#" class="btn btn-secondary" class="augsa" onclick="location.href='indexotrs.html';">Otrā lapa</a></li>
-          </ul>
-        </header>
-      </div>
-</header>
 <body>
-<label for="cena">Ievadiet lamināta cenu (pakā):</label><br>
-<input type="number" id="cena" placeholder="Cena (€/kv.m)"><br><br>
+<header class="bg-dark py-4">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Pirmā lapa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="indexotrs.html">Otrā lapa</a> <!-- Updated this line -->
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
 
-<label for="platiba">Ievadiet istabas platību (kv.m):</label><br>
-<input type="number" id="platiba" placeholder="Platība (kv.m)"><br><br>
-
-<button onclick="aprēķināt()">Aprēķināt</button>
-
-<p id="rezultāts"></p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-<div class="container">
-  <footer class="d-flex flex-column h-100">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-    </ul>
-    <p class="text-center text-body-secondary">© 2024 Noslēguma darbs</p>
-  </footer>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <label for="cena" class="form-label">Ievadiet lamināta cenu (pakā):</label>
+            <input type="number" id="cena" class="form-control mb-3" placeholder="Cena (€/kv.m)">
+            <label for="platiba" class="form-label">Ievadiet istabas platību (kv.m):</label>
+            <input type="number" id="platiba" class="form-control mb-3" placeholder="Platība (kv.m)">
+            <button onclick="aprēķināt()" class="btn btn-primary btn-lg">Aprēķināt</button>
+            <p id="rezultāts" class="mt-3"></p>
+        </div>
+    </div>
 </div>
-<p id="currentDate"></p>
+
+<footer class="bg-dark py-4 mt-5">
+    <div class="container">
+        <p class="text-white text-center mb-0">© 2024 Noslēguma darbs</p>
+        <p id="currentDate" class="text-white text-center"></p>
+    </div>
+</footer>
+
 <script src="script.js"></script>
+<script>
+    var currentDate = new Date();
+    var formattedDate = currentDate.getDate() + "/" + (currentDate.getMonth() + 1) + "/" + currentDate.getFullYear();
+    document.getElementById("currentDate").innerHTML = "Current Date: " + formattedDate;
+</script>
 </body>
 </html>
